VMArgs for tests