@@ -26,6 +26,7 @@
   <properties>
     <tycho-version>0.22.0</tycho-version>
     <manifest-location>META-INF</manifest-location>
+    <test.vmargs>-Xmx512m -XX:MaxPermSize=256m</test.vmargs>
   </properties>
 
   <modules>
@@ -110,6 +111,14 @@
           <configuration>
             <source>1.6</source>
             <target>1.6</target>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.eclipse.tycho</groupId>
+          <artifactId>tycho-surefire-plugin</artifactId>
+          <version>${tycho-version}</version>
+          <configuration>
+            <argLine>${test.vmargs}</argLine>
           </configuration>
         </plugin>
       </plugins>
